// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deberia renderear bien el componente con un gasto 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DesplegadoSumaGastos
    gastosVisibles={
      Array [
        Object {
          "creadoEn": 0,
          "descripcion": "Gum",
          "id": "1",
          "monto": 195,
          "nota": "",
        },
        Object {
          "creadoEn": -345600000,
          "descripcion": "Renta",
          "id": "2",
          "monto": 1000,
          "nota": "",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        Viendo 
        2
         gasto
        s 
        sumando: 
        $11.95
      </p>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Viendo ",
          2,
          " gasto",
          "s ",
          "sumando: ",
          "$11.95",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Viendo ",
        2,
        " gasto",
        "s ",
        "sumando: ",
        "$11.95",
      ],
      "type": "p",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          Viendo 
          2
           gasto
          s 
          sumando: 
          $11.95
        </p>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Viendo ",
            2,
            " gasto",
            "s ",
            "sumando: ",
            "$11.95",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Viendo ",
          2,
          " gasto",
          "s ",
          "sumando: ",
          "$11.95",
        ],
        "type": "p",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Deberia renderear bien el componente con un gasto vacio 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DesplegadoSumaGastos
    gastosVisibles={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        Viendo 
        0
         gasto
        s 
        sumando: 
        $0
      </p>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Viendo ",
          0,
          " gasto",
          "s ",
          "sumando: ",
          "$0",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Viendo ",
        0,
        " gasto",
        "s ",
        "sumando: ",
        "$0",
      ],
      "type": "p",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          Viendo 
          0
           gasto
          s 
          sumando: 
          $0
        </p>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Viendo ",
            0,
            " gasto",
            "s ",
            "sumando: ",
            "$0",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Viendo ",
          0,
          " gasto",
          "s ",
          "sumando: ",
          "$0",
        ],
        "type": "p",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
